# Arm_Robot

./: .gitignore  .gitmodules  README.md  setup.py
Assembly_file/: Part 1.q.SLDPRT  (+4 more)
src/arm_robot/: CMakeLists.txt  package.xml  urdf.rviz
src/arm_robot/config/: joint_names_arm_robot.yaml  joint_trajectory_controller.yaml
src/arm_robot/launch/: arm_urdf.launch  display.launch
src/arm_robot/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
src/arm_robot/urdf/: arm_robot.csv  arm_robot.urdf
src/arm_robot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_robot_moveit/config/: arm_robot.srdf  fake_controllers.yaml  gazebo_arm_robot.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/arm_robot_moveit/launch/: arm_robot_sim.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  full_arm_robot_sim.launch  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  real_arm_robot.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/arm_robot_moveit/scripts/: gettestpose.py  node_add_attach_detach_object_in_rviz.py  pause_resume_service.py  pick_place_fk.py  pick_place_ik.py  pick_place_ik_copy.py  sync_plan.py  testmoveit.py
(+95 files in other folders)
